modification taille photo et ajouter automatisation d'ecriture en js

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         </header>
     </main>
     <section class="presentation">
-        <div class="text">
-            <p>Je m'appelle BOUZID Mehdy, <br>J'ai 22 ans, je suis actuellement<br> en formation de developpeur web web mobile<br>pour monter en compétence par la suite trouver un emploi<br>ou une alternance </p>
-        </div>
-        
+        <div id="text"></div>
     </section>
     <section class="animation">
             <div class="container">
